[package]
name = "fraz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
cityhash = "0.1.1"
codemap = "*"
codemap-diagnostic = "*"
codespan-reporting = "*"
human_format = "1.0"
pomelo = "*"
libc = "*"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = 1