name:                me
version:             0.1.0.0
synopsis:            Foster middle-end
description:         Please see README.md
homepage:            http://github.com/brk/stackme#readme
license:             BSD3
--license-file:        LICENSE
author:              Ben Karel
maintainer:          eschew@gmail.com
copyright:           2010 Ben Karel
category:            Languages
build-type:          Simple
--extra-source-files: Foster/Pb.hs Foster/Pb/Expr.hs
--                    Foster/Pb/SourceLocation.hs Foster/Pb/SourceRange.hs
cabal-version:       >=1.24



executable me
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -fwarn-unused-do-bind -fwarn-tabs
                       -fno-warn-missing-signatures -fno-warn-name-shadowing
                       -fno-warn-type-defaults -fno-warn-orphans
  default-extensions:  FlexibleInstances FlexibleContexts
                       MultiParamTypeClasses DeriveDataTypeable
                       TypeSynonymInstances DeriveFunctor BangPatterns
  other-extensions:    GADTs RankNTypes ScopedTypeVariables StandaloneDeriving
                       PatternGuards NoMonoLocalBinds RecursiveDo FlexibleContexts
  build-depends: array -any,
                 ansi-wl-pprint -any,
                 attoparsec -any,
                 binary -any,
                 bytestring -any,
                 containers -any,
                 criterion >= 1.1.0.0,
                 CBOR -any,
                 double-conversion >=2.0.1.2,
                 data-dword >= 0.3.1,
                 text >= 1.2.0.0,
                 mtl >= 2.2.1,
                 transformers -any,
                 fgl -any,
                 floating-bits -any,
                 hoopl >= 3.10.1.0,
                 time -any,
                 union-find -any,
                 directory -any,
                 smtLib -any,
                 boxes -any,
                 process -any,
                 protocol-buffers,
                 protocol-buffers-descriptor -any,
                 utf8-string -any,
                 base -any
  default-language:    Haskell2010

  other-modules:
      Foster.AnnExpr
      Foster.AnnExprIL
      Foster.Avails
      Foster.Base
      Foster.Bepb.Block
      Foster.Bepb.BlockMiddle
      Foster.Bepb.Decl
      Foster.Bepb.LetVal
      Foster.Bepb.Letable
      Foster.Bepb.Letable.Tag
      Foster.Bepb.Module
      Foster.Bepb.PBInt
      Foster.Bepb.PbAllocInfo
      Foster.Bepb.PbAllocInfo.MemRegion
      Foster.Bepb.PbArrayEntry
      Foster.Bepb.PbArrayLiteral
      Foster.Bepb.PbCallAsm
      Foster.Bepb.PbCallInfo
      Foster.Bepb.PbCoroPrim
      Foster.Bepb.PbCoroPrim.Tag
      Foster.Bepb.PbCtorId
      Foster.Bepb.PbCtorInfo
      Foster.Bepb.PbCtorRepr
      Foster.Bepb.PbCtorRepr.Tag
      Foster.Bepb.PbDataCtor
      Foster.Bepb.PbOccurrence
      Foster.Bepb.PbSwitch
      Foster.Bepb.Proc
      Foster.Bepb.Proc.Linkage
      Foster.Bepb.ProcType
      Foster.Bepb.RebindId
      Foster.Bepb.RootInit
      Foster.Bepb.RootKill
      Foster.Bepb.TermVar
      Foster.Bepb.TermVar.Tag
      Foster.Bepb.Terminator
      Foster.Bepb.Terminator.Tag
      Foster.Bepb.TupleStore
      Foster.Bepb.Type
      Foster.Bepb.Type.Tag
      Foster.CFG
      Foster.CFGOptimization
      Foster.CloConv
      Foster.Config
      Foster.Context
      Foster.ConvertExprAST
      Foster.ExprAST
      Foster.GCRoots
      Foster.ILExpr
      Foster.Infer
      Foster.KNExpr
      Foster.KNStaticChecks
      Foster.KNUtil
      Foster.KSmallstep
      Foster.Kind
      Foster.Letable
      Foster.MKNExpr
      Foster.MainCtorHelpers
      Foster.MainOpts
      Foster.MonoType
      Foster.Monomo
      Foster.Output
      Foster.ParsedType
      Foster.PatternMatch
      Foster.PrettyAnnExpr
      Foster.PrettyExprAST
      Foster.Primitives
      Foster.ProtobufFE
      Foster.ProtobufIL
      Foster.ProtobufUtils
      Foster.RunZ3
      Foster.TypeAST
      Foster.TypeIL
      Foster.TypeLL
      Foster.TypeTC
      Foster.Typecheck
      Foster.TypecheckInt
      Foster.Worklist


source-repository head
  type:     hg
  location: https://bitbucket.com/b/foster
