cabal-version:       2.6
name:                me
version:             0.1.0.1
synopsis:            Foster middle-end
description:         Please see README.md
homepage:            https://github.com/brk/foster
license:             BSD-3-Clause
--license-file:        LICENSE
author:              Ben Karel
maintainer:          eschew@gmail.com
copyright:           2010-2020 Ben Karel
category:            Languages
build-type:          Simple



executable me
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -fwarn-unused-do-bind -fwarn-tabs
                       -fno-warn-missing-signatures -fno-warn-name-shadowing
                       -fno-warn-type-defaults -fno-warn-orphans
  default-extensions:  FlexibleInstances FlexibleContexts
                       MultiParamTypeClasses DeriveDataTypeable
                       TypeSynonymInstances DeriveFunctor BangPatterns
                       OverloadedStrings
  other-extensions:    GADTs RankNTypes ScopedTypeVariables StandaloneDeriving
                       PatternGuards NoMonoLocalBinds RecursiveDo FlexibleContexts
  build-depends: array -any,
                 attoparsec -any,
                 binary -any,
                 bytestring -any,
                 containers -any,
                 criterion >= 1.1.0.0,
                 criterion-measurement -any,
                 cityhash -any,
                 cborg -any,
                 directory -any,
                 double-conversion >=2.0.2.0,
                 data-dword >= 0.3.1,
                 text >= 1.2.0.0,
                 mtl >= 2.2.2,
                 transformers -any,
                 fgl -any,
                 floating-bits -any,
                 haskell-src-exts -any,
                 haskell-src-exts-simple -any,
                 hoopl >= 3.10.1.0,
                 time -any,
                 union-find -any,
                 directory -any,
                 smtLib -any,
                 boxes -any,
                 process -any,
                 prettyprinter >= 1.6.1,
                 prettyprinter-ansi-terminal >= 1.1.1,
                 minuproto >= 0.1.0.4,
                 utf8-string -any,
                 base -any
  default-language:    Haskell2010

  other-modules:
      FosterIL_capnp
      Foster.CapnpIL
      Foster.Tokens
      Foster.AnnExpr
      Foster.Avails
      Foster.Base
      Foster.BaseUtils
      Foster.CFG
      Foster.CloConv
      Foster.Config
      Foster.Context
      Foster.ConvertExprAST
      Foster.ExprAST
      Foster.ILExpr
      Foster.Infer
      Foster.FromHaskell
      Foster.HashCache
      Foster.KNExpr
      Foster.KNStaticChecks
      Foster.KNUtil
      Foster.KSmallstep
      Foster.Kind
      Foster.Letable
      Foster.MKNExpr
      Foster.MainCtorHelpers
      Foster.MainOpts
      Foster.MonoType
      Foster.Monomo
      Foster.Output
      Foster.SourceRange
      Foster.ParsedType
      Foster.PatternMatch
      Foster.PrettyAnnExpr
      Foster.PrettyExprAST
      Foster.Primitives
      Foster.ProtobufFE
      Foster.RunZ3
      Foster.TypeAST
      Foster.TypeLL
      Foster.TypeTC
      Foster.Typecheck
      Foster.TypecheckInt
      Foster.Worklist


source-repository head
  type:     git
  location: https://github.com/brk/foster
